 - [web] support both backspace and delete keys in Mail and Contacts modules
 - [web] improved display of appointment/task comments and card notes

Bug fixes
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [web] fixed adding list members with multiple email addresses
 - [web] fixed responsive condition of login page (960px to 1023px)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] don't update subscriptions when owner is not the active user (#3988)
 - [core] strip cr during LDIF import process (#4172)
 - [core] email alarms are sent too many times (#4100)
 - [eas] don't include task folders if we hide them in SOGo (#4164)

3.2.9 (2017-05-09)
------------------

New features
 - [core] email alarms now have pretty formatting (#805)

Enhancements
 - [core] improved event invitation for all day events (#4145)
 - [web] improved interface refresh time with external IMAP accounts
 - [eas] added photo support for GAL search operations

Bug fixes
 - [web] fixed attachment path when inside multiple body parts
 - [web] fixed email reminder with attendees (#4115)
 - [web] prevented form to be marked dirty when changing password (#4138)
 - [web] restored support for SOGoLDAPContactInfoAttribute
 - [web] avoid duplicated email addresses in LDAP-based addressbook (#4129)
 - [web] fixed mail delegation of pristine user accounts (#4160)
 - [core] cherry-picked comma escaping fix from v2 (#3296)
 - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
 - [core] handle properly mails using windows-1255 charset (#4124)
 - [core] fixed email reminders sent multiple times (#4100)
 - [core] fixed LDIF to vCard conversion for non-handled multi-value attributes (#4086)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] make sure to use crypt scheme when encoding md5/sha256/sha512 (#4137)
 - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)